[package]
name = "fhe_voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe = { git = "https://github.com/tlepoint/fhe.rs.git", branch = "main" }
fhe-traits = "0.1.0-beta.7"
rand = "0.8.4"
fhe-util = "0.1.0-beta.7"
console = "0.15.7"